--- a/referencias.bib
+++ b/referencias.bib
@@ -5,12 +5,14 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
-@online{cc_by_nc_license,
+@misc{cc_by_nc_license,
+        key = {cc_by_nc license}, 
 	title = {{CC} {BY}-{NC} 4.0 Deed {\textbar} Attribution-{NonCommercial} 4.0 International {\textbar} Creative Commons},
 	url = {https://creativecommons.org/licenses/by-nc/4.0/},
 	urldate = {2023-10-10},
 }
-@online{isic_web,
+@misc{isic_web,
+        key = {International Skin Imaging Collaboration},
 	title = {{ISIC} {\textbar} International Skin Imaging Collaboration},
 	url = {https://www.isic-archive.com},
 	abstract = {{ISIC} is improving skin cancer diagnosis by promoting standards in skin imaging, gathering and sharing dermatologic images, \& engaging clinicians \& computer vision researchers},
@@ -20,7 +22,7 @@
 	keywords = {{ISIC}},
 }
 
-@online{luciaclemares_que_2023,
+@misc{luciaclemares_que_2023,
 	title = {¿Qué beneficios tiene la Inteligencia Artificial en la medicina?},
 	url = {https://www.telefonica.com/es/sala-comunicacion/blog/que-beneficios-tiene-la-inteligencia-artificial-en-la-medicina/},
 	abstract = {El uso de la Inteligencia Artificial en la medicina permite crear modelos de aprendizaje automático para personalizar los tratamientos de los pacientes},
@@ -32,7 +34,8 @@
 	keywords = {Motivation},
 }
 
-@online{apd_aplicaciones_IA_Medicina,
+@misc{apd_aplicaciones_IA_Medicina,
+        key = {aplicaciones reales IA en medicina},
 	title = {Aplicaciones reales de la inteligencia artificial en la medicina},
 	url = {https://www.apd.es/aplicaciones-inteligencia-artificial-en-medicina/},
 	abstract = {¿Conoces los efectos de la inteligencia artificial en la medicina? Descubre todos los beneficios que puede aportar y sus aplicaciones más novedosas},
@@ -41,4 +44,392 @@
 	date = {2021-02-23},
 	langid = {spanish},
 	keywords = {Motivation},
+}
+
+@ARTICLE{6263297,
+  author={Garnavi, Rahil and Aldeen, Mohammad and Bailey, James},
+  journal={IEEE Transactions on Information Technology in Biomedicine}, 
+  title={Computer-Aided Diagnosis of Melanoma Using Border- and Wavelet-Based Texture Analysis}, 
+  year={2012},
+  volume={16},
+  number={6},
+  pages={1239-1252},
+  abstract={This paper presents a novel computer-aided diagnosis system for melanoma. The novelty lies in the optimized selection and integration of features derived from textural, border-based, and geometrical properties of the melanoma lesion. The texture features are derived from using wavelet-decomposition, the border features are derived from constructing a boundary-series model of the lesion border and analyzing it in spatial and frequency domains, and the geometry features are derived from shape indexes. The optimized selection of features is achieved by using the gain-ratio method, which is shown to be computationally efficient for melanoma diagnosis application. Classification is done through the use of four classifiers; namely, support vector machine, random forest, logistic model tree, and hidden naive Bayes. The proposed diagnostic system is applied on a set of 289 dermoscopy images (114 malignant, 175 benign) partitioned into train, validation, and test image sets. The system achieves an accuracy of 91.26% and area under curve value of 0.937, when 23 features are used. Other important findings include 1) the clear advantage gained in complementing texture with border and geometry features, compared to using texture information only, and 2) higher contribution of texture features than border-based features in the optimized feature set.},
+  keywords={},
+  doi={10.1109/TITB.2012.2212282},
+  ISSN={1558-0032},
+  month={Nov},}
+
+@ARTICLE{6803866,
+  author={Celebi, M. Emre and Zornberg, Azaria},
+  journal={IEEE Systems Journal}, 
+  title={Automated Quantification of Clinically Significant Colors in Dermoscopy Images and Its Application to Skin Lesion Classification}, 
+  year={2014},
+  volume={8},
+  number={3},
+  pages={980-984},
+  doi={10.1109/JSYST.2014.2313671}}
+
+
+@online{noauthor_what_nodate,
+	title = {What is Deep Learning? {\textbar} {IBM}},
+	url = {https://www.ibm.com/topics/deep-learning},
+	shorttitle = {What is Deep Learning?},
+	abstract = {Deep learning simulates our brain, helping systems learn to identify objects and perform complex tasks with increasing accuracy without human intervention.},
+	urldate = {2023-10-21},
+	langid = {english},
+	keywords = {State of Art, {TFM}},
+}
+
+@online{noauthor_what_nodate-1,
+	title = {What are Convolutional Neural Networks? {\textbar} {IBM}},
+	url = {https://www.ibm.com/topics/convolutional-neural-networks},
+	shorttitle = {What are Convolutional Neural Networks?},
+	abstract = {Learn how convolutional neural networks use three-dimensional data to for image classification and object recognition tasks.},
+	urldate = {2023-10-21},
+	langid = {english},
+	keywords = {State of Art, {TFM}},
+}
+
+@article{wells_medical_1998,
+	title = {A medical expert system approach using artificial neural networks for standardized treatment planning},
+	volume = {41},
+	issn = {0360-3016},
+	doi = {10.1016/S0360-3016(98)00035-2},
+	pages = {173--182},
+	number = {1},
+	journaltitle = {{INTERNATIONAL} {JOURNAL} {OF} {RADIATION} {ONCOLOGY} {BIOLOGY} {PHYSICS}},
+	author = {Wells, {DM} and Niederer, J},
+	date = {1998-04-01},
+	keywords = {State of Art, {TFM}},
+}
+
+@inproceedings{lee_machine_2009,
+	title = {Machine Learning Framework for Classification in Medicine and Biology},
+	volume = {5547},
+	isbn = {978-3-642-01928-9},
+	series = {Lecture Notes in Computer Science},
+	pages = {1--7},
+	booktitle = {{INTEGRATION} {OF} {AI} {AND} {OR} {TECHNIQUES} {IN} {CONSTRAINT} {PROGRAMMING} {FOR} {COMBINATORIAL} {OPTIMIZATION} {PROBLEMS}, {PROCEEDINGS}},
+	author = {Lee, Kva K.},
+	editor = {{VanHoeve}, {WJ} and Hooker, {JN}},
+	date = {2009},
+	note = {{ISSN}: 0302-9743},
+	keywords = {State of Art, {TFM}},
+}
+
+@article{garnavi_computer-aided_2012,
+	title = {Computer-Aided Diagnosis of Melanoma Using Border- and Wavelet-Based Texture Analysis},
+	volume = {16},
+	issn = {1089-7771},
+	doi = {10.1109/TITB.2012.2212282},
+	pages = {1239--1252},
+	number = {6},
+	journaltitle = {{IEEE} {TRANSACTIONS} {ON} {INFORMATION} {TECHNOLOGY} {IN} {BIOMEDICINE}},
+	author = {Garnavi, Rahil and Aldeen, Mohammad and Bailey, James},
+	date = {2012-11},
+	keywords = {State of Art, {TFM}},
+}
+
+@article{dreiseitl_comparison_2001,
+	title = {A comparison of machine learning methods for the diagnosis of pigmented skin lesions},
+	volume = {34},
+	issn = {1532-0464},
+	doi = {10.1006/jbin.2001.1004},
+	pages = {28--36},
+	number = {1},
+	journaltitle = {{JOURNAL} {OF} {BIOMEDICAL} {INFORMATICS}},
+	author = {Dreiseitl, S and Ohno-Machado, L and Kittler, H and Vinterbo, S and Billhardt, H and Binder, M},
+	date = {2001-02},
+	keywords = {State of Art, {TFM}},
+}
+
+@inproceedings{dreiseitl_classifying_2000,
+	title = {Classifying pigmented skin lesions with machine learning methods},
+	isbn = {1-85233-289-1},
+	series = {{PERSPECTIVES} {IN} {NEURAL} {COMPUTING}},
+	pages = {174--179},
+	booktitle = {{ARTIFICIAL} {NEURAL} {NETWORKS} {IN} {MEDICINE} {AND} {BIOLOGY}},
+	publisher = {Artificial Neural Networks Med \& Biol; Fdn Knowledge \& Competence Dev},
+	author = {Dreiseitl, S and Kittler, H and Ganster, H and Binder, M},
+	editor = {Malmgren, H and Borga, M and Niklasson, L},
+	date = {2000},
+	note = {{ISSN}: 1431-6854},
+	keywords = {State of Art, {TFM}},
+}
+
+@article{celebi_automated_2014,
+	title = {Automated Quantification of Clinically Significant Colors in Dermoscopy Images and Its Application to Skin Lesion Classification},
+	volume = {8},
+	issn = {1932-8184},
+	doi = {10.1109/JSYST.2014.2313671},
+	pages = {980--984},
+	number = {3},
+	journaltitle = {{IEEE} {SYSTEMS} {JOURNAL}},
+	author = {Celebi, M. Emre and Zornberg, Azaria},
+	date = {2014-09},
+	keywords = {State of Art, {TFM}},
+}
+
+@article{beuscart_expert_1997,
+	title = {An expert system for automatic analysis of whole body bone scintigraphy},
+	volume = {21},
+	issn = {0928-1258},
+	pages = {56--62},
+	number = {2},
+	journaltitle = {{MEDECINE} {NUCLEAIRE}},
+	author = {Beuscart, R and Wartski, M and Bourguignon, {MH} and Foucher, C},
+	date = {1997},
+	keywords = {State of Art, {TFM}},
+}
+
+@article{abbas_melanoma_2013,
+	title = {Melanoma recognition framework based on expert definition of {ABCD} for dermoscopic images},
+	volume = {19},
+	issn = {0909-752X},
+	doi = {10.1111/j.1600-0846.2012.00614.x},
+	pages = {E93--E102},
+	number = {1},
+	journaltitle = {{SKIN} {RESEARCH} {AND} {TECHNOLOGY}},
+	author = {Abbas, Qaisar and Celebi, M. Emre and Fondon Garcia, Irene and Ahmad, Waqar},
+	date = {2013-02},
+	keywords = {State of Art, {TFM}},
+}
+
+@misc{le_building_2012,
+	title = {Building high-level features using large scale unsupervised learning},
+	url = {http://arxiv.org/abs/1112.6209},
+	abstract = {We consider the problem of building high-level, class-specific feature detectors from only unlabeled data. For example, is it possible to learn a face detector using only unlabeled images? To answer this, we train a 9-layered locally connected sparse autoencoder with pooling and local contrast normalization on a large dataset of images (the model has 1 billion connections, the dataset has 10 million 200x200 pixel images downloaded from the Internet). We train this network using model parallelism and asynchronous {SGD} on a cluster with 1,000 machines (16,000 cores) for three days. Contrary to what appears to be a widely-held intuition, our experimental results reveal that it is possible to train a face detector without having to label images as containing a face or not. Control experiments show that this feature detector is robust not only to translation but also to scaling and out-of-plane rotation. We also find that the same network is sensitive to other high-level concepts such as cat faces and human bodies. Starting with these learned features, we trained our network to obtain 15.8\% accuracy in recognizing 20,000 object categories from {ImageNet}, a leap of 70\% relative improvement over the previous state-of-the-art.},
+	number = {{arXiv}:1112.6209},
+	publisher = {{arXiv}},
+	author = {Le, Quoc V. and Ranzato, Marc'Aurelio and Monga, Rajat and Devin, Matthieu and Chen, Kai and Corrado, Greg S. and Dean, Jeff and Ng, Andrew Y.},
+	urldate = {2023-10-22},
+	date = {2012-07-12},
+	eprinttype = {arxiv},
+	eprint = {1112.6209 [cs]},
+	keywords = {Computer Science - Machine Learning},
+}
+
+@article{Le2011BuildingHF, 
+title={Building high-level features using large scale unsupervised learning}, 
+author={Quoc V. Le and Marc'Aurelio Ranzato and Rajat Monga and Matthieu Devin and Gregory S. Corrado and Kai Chen and Jeffrey Dean and A. Ng}, 
+journal={2013 IEEE International Conference on Acoustics, Speech and Signal Processing}, 
+year={2011}, 
+pages={8595-8598}, 
+url={https://api.semanticscholar.org/CorpusID:206741597} }
+
+@ARTICLE{7792699,
+  author={Yu, Lequan and Chen, Hao and Dou, Qi and Qin, Jing and Heng, Pheng-Ann},
+  journal={IEEE Transactions on Medical Imaging}, 
+  title={Automated Melanoma Recognition in Dermoscopy Images via Very Deep Residual Networks}, 
+  year={2017},
+  volume={36},
+  number={4},
+  pages={994-1004},
+  doi={10.1109/TMI.2016.2642839}}
+
+@article{abuzaghleh_noninvasive_2015,
+	title = {Noninvasive Real-Time Automated Skin Lesion Analysis System for Melanoma Early Detection and Prevention},
+	volume = {3},
+	issn = {2168-2372},
+	doi = {10.1109/JTEHM.2015.2419612},
+	journaltitle = {{IEEE} {JOURNAL} {OF} {TRANSLATIONAL} {ENGINEERING} {IN} {HEALTH} {AND} {MEDICINE}},
+	author = {Abuzaghleh, Omar and Barkana, Buket D. and Faezipour, Miad},
+	date = {2015},
+	keywords = {State of Art, {TFM}},
+}
+
+
+
+@article{thamizhamuthu_deep_2023,
+	title = {Deep Learning-Based Dermoscopic Image Classification System for Robust Skin Lesion Analysis},
+	volume = {40},
+	issn = {0765-0019},
+	doi = {10.18280/ts.400330},
+	pages = {1145--1152},
+	number = {3},
+	journaltitle = {{TRAITEMENT} {DU} {SIGNAL}},
+	author = {Thamizhamuthu, Rajamanickam and Maniraj, Subramanian Pitchiah},
+	date = {2023-06},
+	keywords = {State of Art, {TFM}},
+}
+
+
+@article{chan_expert_1996,
+	title = {An expert system for the detection of cervical cancer cells using knowledge-based image analyzer},
+	volume = {8},
+	issn = {0933-3657},
+	url = {https://www.sciencedirect.com/science/article/pii/0933365795000216},
+	doi = {https://doi.org/10.1016/0933-3657(95)00021-6},
+	abstract = {Analyzing for abnormalities of cell images in the cervix uteri provides a basis for reducing deaths and morbidity from cervical cancer through detection of potentially cancerous cells, provision of prompt advice and opportunities for follow-up and treatments. However, cytopathology is usually based on subjective interpretation of morphological features. Arbitrary criteria have to be devised for their classifications. Subjective interpretations of such criteria are likely to result in diagnostic shifts and consequently disagreement occurs between different interpreters. This article presents a novel approach to the composition of segmentation and diagnosis processes for biomedical image analysis. A prototype expert system has been developed to provide an objective and reliable tool to gynaecologists. Special image analyzing techniques are used and a set of knowledge sources is designed. The expert system employs a robust control strategy which minimizes the amount of domain-specific control knowledge. It has been proved to work effectively in the detection of cervical cancer.},
+	pages = {67--90},
+	number = {1},
+	journaltitle = {Artificial Intelligence in Medicine},
+	author = {Chan, Samuel W. K. and Leung, K. S. and Wong, W. S. Felix},
+	date = {1996},
+	keywords = {Cervical cancer, Expert system, Knowledge-based image analysis, Medical diagnosis, State of Art, {TFM}},
+}
+
+@article{rodrigues_new_2020,
+	title = {A new approach for classification skin lesion based on transfer learning, deep learning, and {IoT} system},
+	volume = {136},
+	issn = {0167-8655},
+	doi = {10.1016/j.patrec.2020.05.019},
+	pages = {8--15},
+	journaltitle = {{PATTERN} {RECOGNITION} {LETTERS}},
+	author = {Rodrigues, Douglas de A. and Ivo, Roberto F. and Satapathy, Suresh Chandra and Wang, Shuihua and Hemanth, Jude and Reboucas Filho, Pedro P.},
+	date = {2020-08},
+	keywords = {State of Art, {TFM}, Transfer learning},
+}
+
+@inproceedings{wall_deep_2020,
+	title = {Deep learning based melanoma diagnosis using dermoscopic images},
+	volume = {12},
+	isbn = {978-981-122-333-4},
+	series = {World Scientific Proceedings Series on Computer Engineering and Information Science},
+	pages = {907--914},
+	booktitle = {DEVELOPMENTS OF ARTIFICIAL INTELLIGENCE TECHNOLOGIES IN COMPUTATION AND ROBOTICS},
+	publisher = {Fern Univ; {TH} Koln Univ Appl Sci; Univ Technol Sydney; {SW} Jiaotong Univ; Shunde Polytechn; Minnan Normal Univ; Natl Assoc Non Class Log \& Computat China},
+	author = {Wall, Conor and Young, Fraser and Zhang, Li and Phillips, Emma-Jane and Jiang, Richard and Yu, Yonghong},
+	editor = {Li, Z and Yuan, C and Lu, J and Kerre, {EE}},
+	date = {2020},
+	keywords = {State of Art, {TFM}, Transfer learning},
+}
+
+@inproceedings{abbes_deep_2021,
+	title = {Deep Neural Networks for Melanoma Detection from Optical Standard Images using Transfer Learning},
+	volume = {192},
+	doi = {10.1016/j.procs.2021.08.134},
+	series = {Procedia Computer Science},
+	pages = {1304--1312},
+	booktitle = {KNOWLEDGE-BASED AND INTELLIGENT INFORMATION \& ENGINEERING SYSTEMS {KSE} 2021)},
+	publisher = {{KES} Int},
+	author = {Abbes, Wiem and Sellami, Dorra},
+	editor = {Watrobski, J and Salabun, W and Toro, C and Zanni-Merk, C and Howlett, {RJ} and Jain, {LC}},
+	date = {2021},
+	note = {{ISSN}: 1877-0509},
+	keywords = {State of Art, {TFM}, Transfer learning},
+}
+
+@inproceedings{georgakopoulos_detection_2017,
+	title = {Detection of Malignant Melanomas in Dermoscopic Images Using Convolutional Neural Network with Transfer Learning},
+	volume = {744},
+	isbn = {978-3-319-65172-9 978-3-319-65171-2},
+	doi = {10.1007/978-3-319-65172-9_34},
+	series = {Communications in Computer and Information Science},
+	pages = {404-414},
+	booktitle = {{ENGINEERING} {APPLICATIONS} {OF} {NEURAL} {NETWORKS}, {EANN} 2017},
+	author = {Georgakopoulos, V, S. and Kottari, K. and Delibasis, K. and Plagianakos, V. P. and Maglogiannis, I},
+	editor = {Boracchi, G and Iliadis, L and Jayne, C and Likas, A},
+	date = {2017},
+	note = {{ISSN}: 1865-0929},
+	keywords = {State of Art, {TFM}, Transfer learning},
+}
+
+@article{talavera-martinez_hair_2021,
+	title = {Hair Segmentation and Removal in Dermoscopic Images Using Deep Learning},
+	volume = {9},
+	issn = {2169-3536},
+	doi = {10.1109/ACCESS.2020.3047258},
+	pages = {2694--2704},
+	journaltitle = {{IEEE} {ACCESS}},
+	author = {Talavera-Martinez, Lidia and Bibiloni, Pedro and Gonzalez-Hidalgo, Manuel},
+	date = {2021},
+	keywords = {State of Art, {TFM}, hair filter},
+}
+
+@article{bardou_hair_2022,
+	title = {Hair removal in dermoscopy images using variational autoencoders},
+	volume = {28},
+	issn = {0909-752X},
+	doi = {10.1111/srt.13145},
+	pages = {445--454},
+	number = {3},
+	journaltitle = {{SKIN} {RESEARCH} {AND} {TECHNOLOGY}},
+	author = {Bardou, Dalal and Bouaziz, Hamida and Lv, Laishui and Zhang, Ting},
+	date = {2022-05},
+	keywords = {State of Art, {TFM}, hair filter},
+}
+
+@article{kaur_hairlines_2022,
+	title = {Hairlines removal and low contrast enhancement of melanoma skin images using convolutional neural network with aggregation of contextual information},
+	volume = {76},
+	issn = {1746-8094},
+	doi = {10.1016/j.bspc.2022.103653},
+	journaltitle = {{BIOMEDICAL} {SIGNAL} {PROCESSING} {AND} {CONTROL}},
+	author = {Kaur, Ranpreet and {GholamHosseini}, Hamid and Sinha, Roopak},
+	date = {2022-07},
+	keywords = {State of Art, {TFM}, hair filter},
+}
+
+@misc{roy_effects_2023,
+	title = {Effects of Degradations on Deep Neural Network Architectures},
+	url = {http://arxiv.org/abs/1807.10108},
+	abstract = {Deep convolutional neural networks ({CNN}) have massively influenced recent advances in large-scale image classification. More recently, a dynamic routing algorithm with capsules (groups of neurons) has shown state-of-the-art recognition performance. However, the behavior of such networks in the presence of a degrading signal (noise) is mostly unexplored. An analytical study on different network architectures toward noise robustness is essential for selecting the appropriate model in a specific application scenario. This paper presents an extensive performance analysis of six deep architectures for image classification on six most common image degradation models. In this study, we have compared {VGG}-16, {VGG}-19, {ResNet}-50, Inception-v3, {MobileNet} and {CapsuleNet} architectures on Gaussian white, Gaussian color, salt-and-pepper, Gaussian blur, motion blur and {JPEG} compression noise models.},
+	number = {{arXiv}:1807.10108},
+	publisher = {{arXiv}},
+	author = {Roy, Prasun and Ghosh, Subhankar and Bhattacharya, Saumik and Pal, Umapada},
+	urldate = {2023-10-23},
+	date = {2023-03-29},
+	eprinttype = {arxiv},
+	eprint = {1807.10108 [cs, eess]},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition, Electrical Engineering and Systems Science - Image and Video Processing, State of Art, {TFM}},
+}
+
+@misc{laina_deeper_2016,
+	title = {Deeper Depth Prediction with Fully Convolutional Residual Networks},
+	url = {http://arxiv.org/abs/1606.00373},
+	abstract = {This paper addresses the problem of estimating the depth map of a scene given a single {RGB} image. We propose a fully convolutional architecture, encompassing residual learning, to model the ambiguous mapping between monocular images and depth maps. In order to improve the output resolution, we present a novel way to efficiently learn feature map up-sampling within the network. For optimization, we introduce the reverse Huber loss that is particularly suited for the task at hand and driven by the value distributions commonly present in depth maps. Our model is composed of a single architecture that is trained end-to-end and does not rely on post-processing techniques, such as {CRFs} or other additional refinement steps. As a result, it runs in real-time on images or videos. In the evaluation, we show that the proposed model contains fewer parameters and requires fewer training data than the current state of the art, while outperforming all approaches on depth estimation. Code and models are publicly available.},
+	number = {{arXiv}:1606.00373},
+	publisher = {{arXiv}},
+	author = {Laina, Iro and Rupprecht, Christian and Belagiannis, Vasileios and Tombari, Federico and Navab, Nassir},
+	urldate = {2023-10-23},
+	date = {2016-09-19},
+	eprinttype = {arxiv},
+	eprint = {1606.00373 [cs]},
+	note = {version: 2},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition, State of Art, {TFM}},
+}
+
+@online{wong_what_2021,
+	title = {What is Residual Connection?},
+	url = {https://towardsdatascience.com/what-is-residual-connection-efb07cab0d55},
+	abstract = {A technique for training very deep neural networks},
+	titleaddon = {Medium},
+	author = {Wong, Wanshun},
+	urldate = {2023-10-23},
+	date = {2021-12-18},
+	langid = {english},
+	keywords = {State of Art},
+}
+
+
+@article{shiri_comprehensive_nodate,
+	title = {A Comprehensive Overview and Comparative Analysis on Deep Learning Models: {CNN}, {RNN}, {LSTM}, {GRU}},
+	abstract = {Deep learning ({DL}) has emerged as a powerful subset of machine learning ({ML}) and artificial intelligence ({AI}), outperforming traditional {ML} methods, especially in handling unstructured and large datasets. Its impact spans across various domains, including speech recognition, healthcare, autonomous vehicles, cybersecurity, predictive analytics, and more. However, the complexity and dynamic nature of real-world problems present challenges in designing effective deep learning models. Consequently, several deep learning models have been developed to address different problems and applications. In this article, we conduct a comprehensive survey of various deep learning models, including Convolutional Neural Networks ({CNNs}), Recurrent Neural Networks ({RNNs}), Generative Models, Deep Reinforcement Learning ({DRL}), and Deep Transfer Learning. We examine the structure, applications, benefits, and limitations of each model. Furthermore, we perform an analysis using three publicly available datasets: {IMDB}, {ARAS}, and Fruit-360. We compare the performance of six renowned deep learning models: {CNN}, Simple {RNN}, Long Short-Term Memory ({LSTM}), Bidirectional {LSTM}, Gated Recurrent Unit ({GRU}), and Bidirectional {GRU}.},
+	author = {Shiri, Farhad Mortezapour and Perumal, Thinagaran and Mustapha, Norwati and Mohamed, Raihani},
+	langid = {english},
+	keywords = {State of Art, {TFM}},
+}
+
+@article{chen_review_2021,
+	title = {Review of Image Classification Algorithms Based on Convolutional Neural Networks},
+	volume = {13},
+	doi = {10.3390/rs13224712},
+	number = {22},
+	journaltitle = {{REMOTE} {SENSING}},
+	author = {Chen, Leiyu and Li, Shaobo and Bai, Qiang and Yang, Jing and Jiang, Sanlong and Miao, Yanming},
+	date = {2021-11},
+	keywords = {State of Art, {TFM}},
+}
+
+@article{shorten_survey_2019,
+	title = {A survey on Image Data Augmentation for Deep Learning},
+	volume = {6},
+	doi = {10.1186/s40537-019-0197-0},
+	number = {1},
+	journaltitle = {{JOURNAL} {OF} {BIG} {DATA}},
+	author = {Shorten, Connor and Khoshgoftaar, Taghi M.},
+	date = {2019-07-06},
+	keywords = {State of Art, {TFM}, data augmentation},
 }
