--- a/0_resumen.tex
+++ b/0_resumen.tex
@@ -7,7 +7,8 @@
 %%%%%%%%%%%%%%%%
 \chapter*{Credits/Copyright}
 
-The dataset used in this work is protected by the CC-BY-NC licence \cite{cc_by_nc_license}.
+The dataset used in this work is protected by the CC-BY-NC licence 
+\cite{cc_by_nc_license}.
 
 \begin{figure}[ht]
 \centering
