--- a/1_introduccion.tex
+++ b/1_introduccion.tex
@@ -31,7 +31,7 @@ It also represents an opportunity to imagine that my work could be helpful, one 
 %%% Goals %%%
 %%%%%%%%%%%%%%%%%%%
 
-The main objective of this project is the classification of dermoscopic images. This challenge can be separated into two points
+This project's main objective is the classification of dermoscopic images in order to identify nine types of skin lesions. To achieve this a Convolutional Neural Network (CNN) will be created. This challenge can be separated into two goals.
 
 \begin{itemize}
     \item On the one hand, to analyse the current \textbf{state of the art} in automatic medical detection by imaging.
@@ -47,9 +47,9 @@ In parallel, the dataset contains a metadata file. This information can help to 
 %%% Methodology %%%
 %%%%%%%%%%%%%%%%%%%
 
-For the implementation of this project, we will use the Cross Industry Standard Process for Data Mining or \textbf{CRISP-DM} methodology. This methodology consists of six phases that are carried out cyclically and that allow feedback to previous phases in order to complement the deficiencies of other phases. The following diagram shows the cyclical circuit of the six phases of this methodology.
+For the implementation of this project, we will use the Cross Industry Standard Process for Data Mining or \textbf{CRISP-DM} methodology. This methodology consists of six phases that are cyclically carried out and it allows feedback to previous phases in order to complement the deficiencies of other phases. The following diagram (figure 1.1) shows the six phases cyclical circuit to be used in this methodology.
 
-\begin{figure}[h]
+\begin{figure}[ht]
     \begin{center}
         \includegraphics[scale=0.60]{images/CRISP-DM_Process_Diagram.png}
         \caption{Process diagram showing the phases of the CRISP-DM methodology}
@@ -62,7 +62,7 @@ The methodology phases and the adaptation to the project are described below:
 \begin{enumerate}
     \item \textbf{Business understanding}
     
-    The first phase of the \textbf{CRISP-DM} model starts with understanding the project's main objectives. This is covered in the \textbf{ Goals section} of the document. It is at this stage of the project that licensing costs are reviewed. In this case, there is \textbf{no associated licensing cost}, because the data is left under an open licence (see \textbf{Licensing section}). Furthermore, the project plan is also created during this phase (see \textbf{project plan section}).
+    The first phase of the \textbf{CRISP-DM} model starts understanding the project's main objectives. These are mentioned in the \textbf{ Goals section} above. At this stage of the project, licensing costs are reviewed. Concerning licensing cost in this project there is \textbf{no associated licensing cost}, because the data is left under an open licence (see \textbf{Licensing section}). Furthermore, the project plan is also created during this phase (see \textbf{project plan section}).
     \item \textbf{Data understanding}
     
     At a general level, this phase seeks to become familiar with the understanding of the data, identify quality problems and discover hidden information or interesting subsets of the data to be processed, which allows a view from different perspectives. An important point will be to verify the quality of the data in order to define the required strategies to address them. At the end of this phase, we will already have a conceptual model of the data.
@@ -72,9 +72,9 @@ The methodology phases and the adaptation to the project are described below:
         
     \item \textbf{Data Preparation}
 
-    In this section, following the \textbf{CRISP-DM} method, a selection and integration of the main data together with their required attributes is carried out. In addition, the data will be cleaned and formatted if required, looking for the main fields or main characteristics.
+    In this section, following the \textbf{CRISP-DM} method, a selection and integration of the main data together with their required attributes is carried out. In addition, the data will be cleaned and formatted if required, looking for the main fields or characteristics.
 
-    Our project has the challenge of working with heavy input data (around 21 GB). Therefore, one of the first tasks will be \textbf{resizing} the data in order to reduce the size in order to work with a more manageable dataset. On the other hand, we will look at using some \textbf{data augmentation} techniques to help us avoid overfitting. 
+    Our project has the challenge of working with heavy input data (around 21 GB). Therefore, one of the first tasks will be \textbf{resizing} the data to reduce the size and work with a more manageable dataset. On the other hand, we will look at using some \textbf{data augmentation} techniques to help us avoid overfitting. 
     
     \item \textbf{Modelling}
 
